--- a/package.json
+++ b/package.json
@@ -3,12 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/material": "^5.16.5",
+    "@reduxjs/toolkit": "^2.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.7",
+    "bootstrap": "^5.3.2",
+    "bootstrap-scss": "^5.3.3",
+    "font-awesome": "^4.7.0",
+    "highcharts": "^11.3.0",
+    "highcharts-react-official": "^3.2.1",
+    "i": "^0.3.7",
+    "npm": "^10.8.2",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.0",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
+    "react-jsx-highcharts": "^5.0.1",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "react-scrollbars-custom": "^4.1.1",
+    "react-switch": "^7.0.0",
+    "recharts": "^2.11.0",
+    "styled-components": "^6.1.8",
+    "typescript": "^5.5.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +61,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "ajv": "^7.2.4"
   }
 }
