--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "react-switch": "^7.0.0",
     "recharts": "^2.11.0",
     "styled-components": "^6.1.8",
-    "typescript": "^5.5.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -65,6 +64,7 @@
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "ajv": "^7.2.4"
+    "ajv": "^7.2.4",
+    "tailwindcss": "^3.4.7"
   }
 }
